Working on building out UI elements.

--- a/src/css/game.scss
+++ b/src/css/game.scss
@@ -1,1 +1,12 @@
 #loading { opacity: 0.0 }
+
+body {
+    padding-bottom: 50px;
+
+    >canvas {
+        display: block;
+        margin: 0 auto;
+        background: #111;
+        border: 1px solid #666;
+    }
+}
