--- a/src/css/inline.scss
+++ b/src/css/inline.scss
@@ -1,17 +1,17 @@
 $opacityTransition: opacity 1s ease-in-out;
 
 html {
-    font-family: helvetica, arial;
-    font-size: 14px;
-    font-weight: 100;
-    color: #ccc;
+    color: #aaa;
     background: #333;
     background-attachment: fixed;
 }
     body {
-       margin: 0;
-       position: relative;
+        font-family: helvetica, arial !important;
+        font-size: 14px;
+        font-weight: 100;
+        margin: 0;
     }
+
         #loading {
             position: absolute;
             top: 50%;
@@ -32,7 +32,13 @@ html {
         }
 
         footer {
-            padding: 20px 15px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 30px;
+            line-height: 30px;
             text-align: center;
-            color: #777;
+            color: #555;
+            font-size: 75% !important;
         }
